# miranda_sandbox

./: CMakeLists.txt  README.md  camera_crafter.obj.c  camera_crafter.obj.h  game_object.obj.c  game_object.obj.h  loader.obj.c  loader.obj.h  miranda.c  miranda.h  sandbox.c
data/: game_config.json  game_ui.json
data/placeholders/: default_json.json  default_lisp.lisp
